--- a/styles.css
+++ b/styles.css
@@ -2,36 +2,38 @@ body
 {
     font-family: Roboto, sans-serif;
     background-color: #ede7f6;
-    overflow: hidden;
     margin:0;
     font-size: 14px;
 }
 
-.navbar 
+header
 {
-    background-color: #1a237e;
-    position: fixed;
-    top: 0;
-    width: 100%;
+    padding: 15px;
 }
 
-.floatLeft
+.leftStyle 
 {
-    float: left;
+  font-size: 1.5rem;
+  float: left;
+  color: #ffffff;
+  text-decoration: none;
 }
 
-.floatRight 
+.leftStyleA 
 {
-    float: right;
+  display: flex;
+  align-items: center;
+  padding-left: 10px !important;
 }
 
-.navbar a 
+.navbarBackground
 {
-    display: block;
+    background-color: #1a237e !important;
+}
+
+.navbarBackground a
+{
     color: #ffffff;
-    text-align: center;
-    padding: 10px 12px;
-    text-decoration: none;
 }
 
 .blueText 
@@ -42,79 +44,55 @@ body
 .blueTextSize
  {
     font-weight: 400;
-    font-size: 2.28rem;
+    font-size: 2rem;
     line-height: 0.1em;
     margin-top: 1.5em;
     margin-bottom: 0.5em;
 }
 
-.blueButton
- {
-    color: #ffffff;
-    background-color: #1a237e;
-    width: 45%;
-    border: none;
-    line-height: 36px;
-    padding: 0 14px;
+a:hover 
+{
+    text-decoration: none;
+}
+
+.mainWidth
+{
+    width: 40%;
 }
 
 .whiteBackground
  {
-    width:400px;
+
     border-radius: 5px;
     background-color: #ffffff;
-    padding: 30px;
+    padding: 35px;
     box-shadow: 1px 1px #888888 ;
 }
 
+.floatLeft 
+{
+    float: left;
+}
+
 input
- {
+{
     border: none;
     border-bottom: 1px solid #9e9e9e;
     width: 100%;
-    font-size: 16px;
-    margin: 0 0 8px 0;
-    height: 3rem;
 }
 
-
-.center 
+.blueButton 
 {
-    display: flex;           
-    flex-direction: column;  
-    justify-content: center; 
-    align-items: center;    
-    margin-top: 60px;
-    padding-top: 20px;
-    text-align: center; 
-  }
+    width: 50%;
+    font-weight: 500;
+    height: 40px;
+}
 
-  .leftStyle 
-  {
-    font-size: 1.5rem;
-    float: left;
-    color: #ffffff;
-    text-decoration: none;
-  }
+@media only screen and (max-width: 768px){
 
-  .leftStyleA 
-  {
-    display: flex;
-    align-items: center;
-    padding-left: 10px !important;
-  }
-
-  .navbar .leftStyle
-   {
-    display: flex;
-    height: 100%;
-    align-items: center;
-    margin-left: 2%;
-  }
-
-  .textStyle
-   {
-      text-decoration: none;
-  }
-  
-  
+    .mainWidth
+    {
+        width: 100%;
+    }
+    
+}
