Removed Bootstrap Styling

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,22 @@ body
 header
 {
     padding: 15px;
+    position:relative;
+}
+
+.navItem {
+    position:absolute;
+    right: 2rem;
+    bottom: 2rem;
+}
+
+ul li {
+    text-decoration: none;
+    list-style: none;
+}
+
+ul li a{
+    text-decoration: none;
 }
 
 .leftStyle 
@@ -31,14 +47,22 @@ header
     background-color: #1a237e !important;
 }
 
+.header {
+    margin: 2rem;
+}
 .navbarBackground a
 {
     color: #ffffff;
 }
 
+.imgPadding{
+    padding-top: 3rem;
+}
+
 .blueText 
 {
     color: #1a237e;
+    text-decoration: none;
 }
 
 .blueTextSize
@@ -48,6 +72,7 @@ header
     line-height: 0.1em;
     margin-top: 1.5em;
     margin-bottom: 0.5em;
+    padding-bottom: 1rem;
 }
 
 a:hover 
@@ -58,6 +83,8 @@ a:hover
 .mainWidth
 {
     width: 40%;
+    margin: auto;
+    text-align: center;
 }
 
 .whiteBackground
@@ -66,7 +93,11 @@ a:hover
     border-radius: 5px;
     background-color: #ffffff;
     padding: 35px;
-    box-shadow: 1px 1px #888888 ;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
+.formStyle {
+padding: 30px;
 }
 
 .floatLeft 
@@ -86,6 +117,8 @@ input
     width: 50%;
     font-weight: 500;
     height: 40px;
+    border: none;
+    color: #ffffff;
 }
 
 @media only screen and (max-width: 768px){
@@ -93,6 +126,10 @@ input
     .mainWidth
     {
         width: 100%;
+    }
+
+    .whiteBackground {
+        margin: 25px;
     }
     
 }
