--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,7 @@ a:hover
 
 .mainWidth
 {
-    width: 40%;
+    width: 35%;
     margin: auto;
     text-align: center;
 }
@@ -92,29 +92,58 @@ a:hover
 
     border-radius: 5px;
     background-color: #ffffff;
-    padding: 35px;
+    padding: 0px 25px 25px 25px;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
 .formStyle {
-padding: 30px;
+padding: 10px;
 }
 
-.floatLeft 
-{
-    float: left;
-}
+    input:focus ~ label {
+    color: #1a237e;
+    top: -2.25rem;
+    left: 0;
+    -webkit-transition: all 0.125s ease;
+    transition: all 0.125s ease;
+   }
+   
+   .styled-input {
+     margin: 2rem 0 1rem;
+     position: relative;
+   }
+   
+   .styled-input label {
+     color: #000;
+     font-size: 16px;
+     padding: 1rem 1rem 1rem 0;
+     position: absolute;
+     top: 0;
+     left: 0;
+     -webkit-transition: all 0.25s ease;
+     transition: all 0.25s ease;
+     pointer-events: none;
+   }
+   
+   
+   input {
+     padding: 0.75rem;
+     border: none;
+     border-bottom: 1px solid #9e9e9e;
+     width: 95%;
+   }
+   
+   
+   input:focus {
+    outline: 0; 
+    border-bottom: 2px solid #1a237e;
+    padding: 1rem 1rem 1rem 0;
+    }
 
-input
-{
-    border: none;
-    border-bottom: 1px solid #9e9e9e;
-    width: 100%;
-}
-
+  
 .blueButton 
 {
-    width: 50%;
+    width: 40%;
     font-weight: 500;
     height: 40px;
     border: none;
